# low-fidelity-dynamic-models

./: .clang-format  .gitignore  CITATION.cff  LICENSE  README.md
docs/: CONTRIBUTING.md  Doxyfile  (+1 more)
paper/paper_results/: 11dof_gpu_bench.cu  18dof_gpu_bench.cu  24dof_gpu_bench.cu  CMakeLists.txt  README.md  accTest.cpp  bench.sh  dlTest.cpp  gpu_bench.sh  timingTest.cpp
paper/paper_results/data/Chrono/: acc_chrono.csv  dl_chrono.csv
paper/paper_results/data/LFDM/: 11dof.out  18dof.out  24dof.out  acc_sedan11Hi.csv  acc_sedan18Hi.csv  acc_sedan24Hi.csv  dl_sedan11Hi.csv  dl_sedan18Hi.csv  dl_sedan24Hi.csv
paper/paper_results/plotting/: accTestPlot.py  dlTestPlot.py  gpuScalePlot.py
wheeled_vehicle_models/: CMakeLists.txt  README.md  buildSundials.sh
wheeled_vehicle_models/11dof/: CMakeLists.txt  README.md  dof11.cpp  dof11.h  dof11_halfImplicit.cpp  dof11_halfImplicit.h  dof11_sundials.cpp  dof11_sundials.h
wheeled_vehicle_models/11dof-gpu/: CMakeLists.txt  README.md  dof11_gpu.cu  dof11_gpu.cuh  dof11_halfImplicit_gpu.cu  dof11_halfImplicit_gpu.cuh
wheeled_vehicle_models/11dof-gpu/data/input/: acc10.txt  long_sine9.txt  steer.txt
wheeled_vehicle_models/11dof-gpu/demos/HMMWV/: demo_hmmwv.cu  demo_hmmwv_11gpu.cu  demo_hmmwv_controlsFunctor.cu  demo_hmmwv_controlsFunctor_11gpu.cu  demo_hmmwv_step.cu  demo_hmmwv_step_11gpu.cu  demo_hmmwv_varControls.cu  demo_hmmwv_varControls_11gpu.cu
wheeled_vehicle_models/11dof/data/input/: acc05.txt  iso_dl_12.txt  iso_dl_15.txt  long_sine7.txt
wheeled_vehicle_models/11dof/demos/: demo_hmmwv_hi.cpp  demo_hmmwv_hi_step.cpp  demo_hmmwv_hi_stepWithJac.cpp  demo_hmmwv_sundials.cpp  demo_hmmwv_sundials_withFSA.cpp  demo_snopt.cpp
wheeled_vehicle_models/11dof/demos/HMMWV/: demo_hmmwv_hi.cpp  demo_hmmwv_hi_11.cpp  demo_hmmwv_hi_step.cpp  demo_hmmwv_hi_stepWithJac.cpp  demo_hmmwv_hi_stepWithJac_11.cpp  demo_hmmwv_hi_step_11.cpp  demo_hmmwv_sundials.cpp  demo_hmmwv_sundials_11.cpp  demo_hmmwv_sundials_withFSA.cpp  demo_hmmwv_sundials_withFSA_11.cpp  demo_snopt.cpp
wheeled_vehicle_models/11dof/demos/Sedan/: demo_sedanNr_hi.cpp  demo_sedanNr_hi_11.cpp  demo_sedanNr_sundials.cpp  demo_sedanNr_sundials_11.cpp
wheeled_vehicle_models/11dof/py/: CMakeLists.txt  dof11.i  dof11Sundials.i
wheeled_vehicle_models/18dof/: CMakeLists.txt  README.md  dof18.cpp  dof18.h  dof18_halfImplicit.cpp  dof18_halfImplicit.h  dof18_sundials.cpp  dof18_sundials.h
wheeled_vehicle_models/18dof-gpu/: CMakeLists.txt  README.md  dof18_gpu.cu  dof18_gpu.cuh  dof18_halfImplicit_gpu.cu  dof18_halfImplicit_gpu.cuh
wheeled_vehicle_models/18dof/demos/: demo_hmmwv_sundials.cpp  demo_sedan_sundials.cpp  demo_snopt.cpp
wheeled_vehicle_models/18dof/py/: CMakeLists.txt  dof18.i  dof18Sundials.i
wheeled_vehicle_models/24dof/: CMakeLists.txt  README.md  dof24.cpp  dof24.h  dof24_halfImplicit.cpp  dof24_halfImplicit.h  dof24_sundials.cpp  dof24_sundials.h
wheeled_vehicle_models/24dof-gpu/: CMakeLists.txt  README.md  dof24_gpu.cu  dof24_gpu.cuh  dof24_halfImplicit_gpu.cu  dof24_halfImplicit_gpu.cuh
wheeled_vehicle_models/24dof/py/: CMakeLists.txt  dof24.i  dof24Sundials.i
wheeled_vehicle_models/chrono_reference_data/latest_sedan_withTire/: double_lane10_4wd5e6.csv  double_lane3_4wd5e6.csv  double_lane4_4wd5e6.csv  double_lane5_4wd5e6.csv  double_lane6_4wd5e6.csv  double_lane7_4wd5e6.csv  double_lane8_4wd5e6.csv  double_lane9_4wd5e6.csv  long_sine10_4wd5e6.csv  long_sine4_4wd5e6.csv  long_sine5_4wd5e6.csv  long_sine6_4wd5e6.csv  long_sine7_4wd5e6.csv  long_sine8_4wd5e6.csv  long_sine9_4wd5e6.csv  st3_right_4wd5e6.csv  st4_left_4wd5e6.csv  st6_right_4wd5e6.csv  st8_left_4wd5e6.csv  st9_right_4wd5e6.csv  test_set1_4wd5e6.csv  test_set2_4wd5e6.csv
wheeled_vehicle_models/chrono_reference_data/old_hmmwv/: acc3_shafts.csv  acc_test_shafts.csv  double_lane10_shafts.csv  double_lane3_shafts.csv  double_lane4_shafts.csv  double_lane5_shafts.csv  double_lane6_shafts.csv  double_lane7_shafts.csv  double_lane8_shafts.csv  double_lane9_shafts.csv  double_lane_shafts.csv  long_sine10_shafts.csv  long_sine4_shafts.csv  long_sine5_shafts.csv  long_sine6_shafts.csv  long_sine7_shafts.csv  long_sine8_shafts.csv  long_sine9_shafts.csv  st1_shafts.csv  st2_shafts.csv  st3_right_shafts.csv  st4_left_shafts.csv  st4_shafts.csv  st6_right_shafts.csv  st6_shafts.csv  st8_left_shafts.csv  st8_shafts.csv  st9_right_shafts.csv  st9_shafts.csv  st_shafts.csv  step_acc_shafts.csv  test_set100s_shafts.csv  test_set1_shafts.csv  test_set2_shafts.csv
wheeled_vehicle_models/chrono_reference_data/v8_sedan/: double_lane10.csv  double_lane3.csv  double_lane4.csv  double_lane5.csv  double_lane6.csv  double_lane7.csv  double_lane8.csv  double_lane9.csv  long_sine10.csv  long_sine4.csv  long_sine5.csv  long_sine6.csv  long_sine7.csv  long_sine8.csv  long_sine9.csv  st3_right.csv  st4_left.csv  st6_right.csv  st8_left.csv  st9_right.csv  test_set1.csv  test_set2.csv
wheeled_vehicle_models/chrono_reference_data/v8_sedan_withTire/: acc3.csv  double_lane10.csv  double_lane10_2wd.csv  double_lane10_2wd1e5.csv  double_lane10_4wd5e6.csv  double_lane3.csv  double_lane3_2wd.csv  double_lane3_4wd1e5.csv  double_lane3_4wd5e6.csv  double_lane4.csv  double_lane4_2wd.csv  double_lane4_2wd1e5.csv  double_lane4_4wd5e6.csv  double_lane5.csv  double_lane5_2wd.csv  double_lane5_2wd1e5.csv  double_lane5_4wd5e6.csv  double_lane6.csv  double_lane6_2wd.csv  double_lane6_2wd1e5.csv  double_lane6_4wd5e6.csv  double_lane7.csv  double_lane7_2wd.csv  double_lane7_4wd1e5.csv  double_lane7_4wd5e6.csv  double_lane8.csv  double_lane8_2wd.csv  double_lane8_4wd1e5.csv  double_lane8_4wd5e6.csv  double_lane9.csv  double_lane9_2wd.csv  double_lane9_4wd1e5.csv  double_lane9_4wd5e6.csv  long_sine10.csv  long_sine10_2wd.csv  long_sine10_4wd1e5.csv  long_sine10_4wd5e6.csv  long_sine4.csv  long_sine4_2wd.csv  long_sine4_4wd1e5.csv  (+49 more)
wheeled_vehicle_models/tests/: 11dof.cpp  11dof_gpu.cu  18dof.cpp  18dof_gpu.cu  24dof.cpp  24dof_gpu.cu  CMakeLists.txt
wheeled_vehicle_models/utils/: utils.cpp  utils.h  utils_gpu.cu  utils_gpu.cuh
(+112 files in other folders)
